20230227_Bug Fix: -Images don't appear on products section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<header id="header">
 		<div class="branding">
-			<img src="./assets/img/03.jpg" alt="brand-logo" id="header-img" class="logo">
+			<img src="assets/img/03.jpg" alt="brand-logo" id="header-img" class="logo">
 			<p id="brand-name">Karisma.Co</p>
 		</div>
 		<nav id="nav-bar">
@@ -36,7 +36,7 @@
 			frameborder="0"
 			allowfullscreen
 			></iframe>
-		<img class="section01-img" src="./assets/img/01.jpg" alt="banner-img">
+		<img class="section01-img" src="assets/img/01.jpg" alt="banner-img">
 		<div>
 			<ul class="tagline">
 				<li>Premium Materials</li>
@@ -52,31 +52,31 @@
 		<div id="products-grid">
 			
 			<div id="product-tile">
-				<img src="/assets/img/04.jpg" 
+				<img src="assets/img/04.jpg" 
 				alt="product"
 				id="product-img">
 				<p id="product-name">Product Name</p>
 			</div>
 			<div id="product-tile">
-				<img src="/assets/img/05.jpg" 
+				<img src="assets/img/05.jpg" 
 				alt="product"
 				id="product-img">
 				<p id="product-name">Product Name</p>
 			</div>
 			<div id="product-tile">
-				<img src="/assets/img/07.jpg" 
+				<img src="assets/img/07.jpg" 
 				alt="product"
 				id="product-img">
 				<p id="product-name">Product Name</p>
 			</div>
 			<div id="product-tile">
-				<img src="/assets/img/08.jpg" 
+				<img src="assets/img/08.jpg" 
 				alt="product"
 				id="product-img">
 				<p id="product-name">Product Name</p>
 			</div>
 			<div id="product-tile">
-				<img src="/assets/img/09.jpg" 
+				<img src="assets/img/09.jpg" 
 				alt="product"
 				id="product-img">
 				<p id="product-name">Product Name</p>
